<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_white_small_corner"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/txt_clean_cache_hint1"
            android:textColor="@color/main_black_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:text="@string/txt_clean_cache_hint2"
            android:textColor="@color/main_black_color"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="@drawable/shape_gray_bg"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_clean_cache_sure"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/txt_sure"
                android:textColor="@color/main_theme_color"
                android:textSize="16sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/light_gray" />


            <Button
                android:id="@+id/btn_clean_cache_cancle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/txt_cancle"
                android:textColor="@color/main_theme_color"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>
</RelativeLayout>