<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <!--标题-->
    <include layout="@layout/layout_head2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp">

        <EditText
            android:id="@+id/edt_forget_pwd_phone"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/shape_register_edt"
            android:hint="@string/txt_register_account_hint"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:textColor="@color/three_txt_color"
            android:textColorHint="@color/content_black_color"
            android:textSize="16sp"
            android:maxLength="11"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/edt_forget_pwd_message_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shape_register_edt"
                android:hint="@string/txt_register_code_hint"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:textColor="@color/three_txt_color"
                android:textColorHint="@color/content_black_color"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_forget_pwd_send_code"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/shape_gray_small_corner"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/txt_send_message"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RelativeLayout>


        <Button
            android:id="@+id/btn_forget_pwd_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@mipmap/btn_login"
            android:text="@string/txt_next"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </LinearLayout>


</LinearLayout>